Fix block name in template
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/awfy-speed/templates/base.html
+++ b/awfy-speed/templates/base.html
@@ -51,6 +51,6 @@
 
   <script type="text/javascript" src="{% static 'js/jquery-1.12.3.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/codespeed.js' %}"></script>
-  {% block extra_body %}{% endblock %}
+  {% block extra_script %}{% endblock %}
 </body>
 </html>
